src/objects/IAD_Picklists__c.object
<CustomObject>
    <fields>
        <fullName>Order_Reasons_for_Cancellation__c</fullName>
        <label>Order Reasons for Cancellation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Exchange Product</fullName>
                </value>
                <value>
                    <fullName>Requires non-LZ Service</fullName>
                </value>
                <value>
                    <fullName>Satisfaction (Full Refund)</fullName>
                </value>
                <value>
                    <fullName>Satisfaction (Partial Refund)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Discount__c</fullName>
        <label>Reason for Discount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Subscription Cancellation</fullName>
                </value>
                <value>
                    <fullName>Customer Overcharged</fullName>
                </value>
                <value>
                    <fullName>Change to Order</fullName>
                </value>
                <value>
                    <fullName>Managed Plan Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Other_Reasons_for_Cancel__c</fullName>
        <label>Sub Other Reasons for Cancel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service No Longer Needed</fullName>
                </value>
                <value>
                    <fullName>Unaware of Services</fullName>
                </value>
                <value>
                    <fullName>Not Satisfied with Consultations</fullName>
                </value>
                <value>
                    <fullName>Price is too Expensive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Registered_Agent_Reasons_for_Cancel__c</fullName>
        <label>Sub Registered Agent Reasons for Cancel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dissolved</fullName>
                </value>
                <value>
                    <fullName>RA Changed with SOS</fullName>
                </value>
                <value>
                    <fullName>Pending Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IAD Picklists</label>
    <nameField>
        <label>IAD Picklists Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IAD Picklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>